still testing fix for css flip animation not working on mobile safari

--- a/src/App.css
+++ b/src/App.css
@@ -80,11 +80,8 @@ body {
     position:absolute;
     transform-style: preserve-3d;
     transition: all 0.5s ease;
+    -webkit-backface-visibility: hidden; backface-visibility: hidden;
 }
-
-/* .card:hover {
-    transform: rotateY(180deg);
-} */
 
 .front-card {
     position: absolute;
